docs/api/qiskit-ibm-runtime/0.46/ibm-quantum-schemas-executor-version-0-1-samplex-item-model.mdx
---
title: SamplexItemModel (v0.46)
description: API reference for ibm_quantum_schemas.executor.version_0_1.SamplexItemModel in qiskit-ibm-runtime v0.46
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.executor.version_0_1.SamplexItemModel
---

<span id="ibm-quantum-schemas-executor-version-0-1-samplexitemmodel" />

# SamplexItemModel

<Class id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.5.20260320/ibm_quantum_schemas/executor/version_0_1/models.py#L99-L146" signature="SamplexItemModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Execution specifications for a single quantum circuit.

  ### chunk\_size

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.chunk_size" attributeTypeHint="Annotated[int, FieldInfo(annotation" attributeValue="NoneType, required=True, metadata=[Ge(ge=1)])] | Literal['auto'] = 'auto'" modifiers="field">
    The maximum number circuit arguments to bind to the circuit per shot loop.

    When `"auto"`, the number is chosen server-side with heuristics designed to optimize execution speed. A quantum program must have items where either all chunk sizes are integer-valued, or all chunk sizes are `"auto"`. Integer values are only allowed inside of session exection mode.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### circuit

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.circuit" attributeTypeHint="QpyModelV13ToV16 [Required]" modifiers="field">
    A QPY-encoded circuit.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### item\_type

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.item_type" attributeTypeHint="Literal['samplex']" attributeValue="'samplex'" modifiers="field">
    The type of quantum program item.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### samplex

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.samplex" attributeTypeHint="SamplexModelSSV1 [Required]" modifiers="field">
    A JSON-encoded samplex.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### samplex\_arguments

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.samplex_arguments" attributeTypeHint="dict[str, bool | int | PauliLindbladMapModel | TensorModel] [Required]" modifiers="field">
    Arguments to the samplex.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### shape

  <Attribute id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.shape" attributeTypeHint="list[int] [Required]" modifiers="field">
    The shape of this item.

    This shape must extend (via broadcasting) the implicit shape of the :attr:\~samplex\_arguments\`. The non-trivial axes it introduces enumerate randomizations.

    **Validated by**

    *   `cross_validate`
  </Attribute>

  ### cross\_validate

  <Function id="ibm_quantum_schemas.executor.version_0_1.SamplexItemModel.cross_validate" github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.5.20260320/ibm_quantum_schemas/executor/version_0_1/models.py#L130-L146" signature="cross_validate" modifiers="validator">
    Check for mutual compatibility of types and shapes of attributes.

    **Return type**

    *Self*
  </Function>
</Class>

